Bug #26663 ndb: cluster have issues with api nodeids > 63
Submitted: 27 Feb 2007 4:19 Modified: 9 Mar 2007 1:09
Reporter: Tomas Ulin Email Updates:
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.1 telco OS:
Assigned to: Tomas Ulin Target Version:

[27 Feb 2007 4:19] Tomas Ulin
Description:
If mysqld has nodeid > 63 array gets out of bound in mysqld

How to repeat:
.

Suggested fix:
extend array to 256

Workaround:  keep mysqld's with nodeid < 64
[27 Feb 2007 4:22] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/20622
[8 Mar 2007 16:52] Tomas Ulin
ndb-6.1.4
[9 Mar 2007 1:09] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented in 6.1.14 changelog. (Assuming mysql-5.1.15-ndb-6.1.14 - please advise if this
is incorrect.)
[13 Mar 2007 0:37] Jon Stephens
Fix was actually documented in changelog for mysql-5.1.16-ndb-6.2.0.
[16 Mar 2007 3:04] Jon Stephens
Disregard previous comment - change was documented for ndb-6.1.4.
[16 Mar 2007 3:04] Jon Stephens
Disregard previous comment - change was documented for ndb-6.1.4.