Bug #26663 ndb: cluster have issues with api nodeids > 63